Adicionado integração de Api via fetch e axios

--- a/axios/index.html
+++ b/axios/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Consumindo API com Fetch</title>
+  <title>Consumindo API com Axios</title>
   <style>
     * {
       margin: 0;
       padding: 0;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
   <script src="./main.js"></script>
 </head>
 <body>
-  <h1>Consumindo API com Fetch</h1>
+  <h1>Consumindo API com Axios</h1>
+  <div id="apiResult">Api Result</div>
 
-  <div id="alertApi">Alert Api</div>
-  <hr>
-  <div id="renderApiResult">Hello</div>
-  <hr>
+  <hr />
   <p id="userName"></p>
   <p id="userCity"></p>
-  <img src="" id="userAvatar" />
-</body>
+  <p id="userID"></p>
+  <img src="" id="userAvatar" /></body>
 </html>
